# passivbot

./: .gitignore  Dockerfile  STAGNATION_COUNTER_SUMMARY.md  adam.sh  algorithms.py  algorithms.py.bak  algorithms.py.postisland  algorithms_CCEA.py  algorithms_islandBeforeCCEA.py  algorithms_islandCCEAperParam.py  algorithms_normal.py  analysis_requirements.txt  balance.csv  balance_tracker.py  batch_backtest.sh  bot_tracker.py  bounds.json  build_optimized_rust.sh  build_pgo.sh  checkpoint.pkl.2020shortlong  checkpoint.pkl.3314  checkpoint.pkl.500  checkpoint.pkl.786  checkpoint.pkl.821  checkpoint.pkl.888  checkpoint.pkl.908  checkpoint.pkl.before1582  checkpoint.pkl.before2  checkpoint.pkl.beforeExtremists  checkpoint.pkl.beforeScratch  checkpoint.pkl.beforeWide1500  checkpoint.pkl.capped  checkpoint.pkl.dontcareaboutdrawdown  checkpoint.pkl.gonewild  checkpoint.pkl.gonewild2.0  checkpoint.pkl.groundUp  checkpoint.pkl.latebefore2  checkpoint.pkl.long  checkpoint.pkl.many2000sone3742  checkpoint.pkl.many3000some4000  (+65 more)
backup/: backtest.rs  global_best.py  optimize.json  types.rs
configs/: 0.00287465_long.json  0.00307644_long.json  0.00307644_mixed.json  0.00343435_long.json  0.00343435_mixed.json  0.00344091_long.json  0.00344091_mixed.json  0.00362876_long.json  0.00362876_mixed.json  0.00377451_long.json  0.00377451_mixed.json  0.00397606_long.json  0.00397606_mixed.json  0.00402418_long.json  0.00402418_mixed.json  0.00403493_mixed.json  0.00406866_long.json  0.00421358_long.json  0.00422268_long.json  0.00428044_long.json  0.00436935_long.json  0.00438486_long.json  0.00444279_long.json  0.00458102_long.json  0.0045844_long.json  0.00481914_long.json  499778.json  WAAA_short.json  all_coins.json  approved_coins.json  approved_coins_original.json  backtest.json  binancecfg.json  gate_coins.json  ignored_coins.json  maybe_long.json  maybe_mixed.json  myconfig.json  myconfig_bak.json  newconfig.json  (+36 more)
landscape_analysis/: ai_agent_report.json  fitness_values.npy  landscape_report.json  samples.npy
neat_checkpoints/: neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-10  neat-checkpoint-11  neat-checkpoint-12  neat-checkpoint-13  neat-checkpoint-14  neat-checkpoint-15  neat-checkpoint-16  neat-checkpoint-17  neat-checkpoint-18  neat-checkpoint-19  neat-checkpoint-2  neat-checkpoint-20  neat-checkpoint-21  neat-checkpoint-22  neat-checkpoint-23  neat-checkpoint-24  neat-checkpoint-25  neat-checkpoint-26  neat-checkpoint-27  neat-checkpoint-28  neat-checkpoint-29  neat-checkpoint-3  neat-checkpoint-30  neat-checkpoint-31  neat-checkpoint-32  neat-checkpoint-33  (+16 more)
passivbot-rust/: Cargo.toml  build.rs
passivbot-rust/.cargo/: config.toml
passivbot-rust/src/: backtest.rs  dirty_flag_tests.rs  lib.rs  python.rs  rolling_volume_tests.rs  types.rs  utils.rs
(+2624 files in other folders)
