[package]
name = "passivbot_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3           # Maximum speed optimization
lto = "fat"            # Aggressive link-time optimization
codegen-units = 1      # Single unit for maximum cross-function optimization
strip = "none"         # Keep symbols for debugging if needed
panic = "abort"        # Fastest panic handling
incremental = false    # Disable incremental compilation for max optimization
overflow-checks = false # Remove runtime checks for speed
debug = false          # No debug info for smaller/faster binary
debug-assertions = false # Remove debug assertions
rpath = false          # No runtime path for cleaner binary
split-debuginfo = "off" # No debug info splitting

[lib]
name = "passivbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
ndarray = { version = "0.15.6", features = ["rayon"] }  # Enable parallel processing
numpy = "0.21.0"
memmap2 = "0.9.4"  # Much faster than memmap 0.7.0, has populate() method
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.8"  # Data parallelism for maximum CPU utilization
