[package]
name = "passivbot_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
debug = false
debug-assertions = false
rpath = false
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = false

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[lib]
name = "passivbot_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
numpy = "0.21.0"
memmap2 = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.8"
wide = "0.7"

[dev-dependencies]
flamegraph = "0.6"
